# cloudsave-validator-grpc-plugin-server-python

./: .dockerignore  Dockerfile  Jenkinsfile.github  Makefile  README.md  demo.sh  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
demo/: cloudsave-validator-demo.postman_collection.json  get-access-token.postman_collection.json
src/: cloudsaveValidatorService_pb2.py  cloudsaveValidatorService_pb2.pyi  cloudsaveValidatorService_pb2_grpc.py
src/accelbyte_grpc_plugin/: app.py  utils.py
src/accelbyte_grpc_plugin/interceptors/: authorization.py
src/accelbyte_grpc_plugin/options/: prometheus.py
src/app/: __main__.py  utils.py
src/app/proto/: cloudsaveValidatorService.proto  cloudsaveValidatorService_pb2.py  cloudsaveValidatorService_pb2_grpc.py
src/app/services/: cloudsave_validator_service.py  models.py
test/functional/: test-accelbyte-hosted.sh  test-local-hosted.sh
test/sample/: test-accelbyte-hosted.sh  test-local-hosted.sh
tests/app_tests/: __main__.py
tests/app_tests/services/: __init__.py  cloudsave_validator_service.py
